[package]
name = "meek"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.2", features = ["derive"] }
reqwest = { version = "0.11.16", features = ["stream", "blocking", "json"] }
tokio = { version = "1.28.0", features = ["full"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
dirs = "5.0.1"
rustix = { version = "0.37.19", features = ["process"] }
toml = "0.7.3"
